layout issue of submit#cellphonePage under 720x1280 Device pixel ratio

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -126,3 +126,6 @@ img {
     margin: 20px auto !important;
     float: center !important;
 }
+.ui-field-contain-custom {
+    margin: 0 0 !important;
+}
