--- a/src/css/jquery.mobile.customize-1.4.3.css
+++ b/src/css/jquery.mobile.customize-1.4.3.css
@@ -36,5 +36,5 @@ fieldset.ui-controlgroup {
 .custom-collapsibleset-bg {
     background:url(../images/bg.jpg) center no-repeat;
     background-size: 100% 100%;
-    height:1020px;
+    height:1280px;
 }
